# SurrogateFactory

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  air_quality_RBF.pkl  air_quality_neuralnetwork.pkl  docker-compose.yaml  features.csv  pyproject.toml  requirements.txt  targets.json
.github/workflows/: ci.yaml
Data Pipeline/: data_reader.py  esss 3phase lgr field.global-sa-input.json  esss 3phase lgr field.global_sa_summary.json  esss 3phase lgr field.runs-specs.json  surrogate_summary.json
Data Pipeline/esss 3phase lgr field small/esss3lgrfield_R00001/: result.sourres  result.sourres.00000  result.sourres.00010  result.sourres.00013  result.sourres.00015  result.sourres.00017  result.sourres.00019  result.sourres.00021  result.sourres.00023  result.sourres.00025  result.sourres.00027  result.sourres.00029  result.sourres.00031  result.sourres.00033  result.sourres.00035  result.sourres.00037  result.sourres.00039  result.sourres.00041  result.sourres.00043  result.sourres.00045  result.sourres.00047  result.sourres.00049  result.sourres.00051  result.sourres.00053  result.sourres.00055  result.sourres.00057  result.sourres.00059  result.sourres.00061  result.sourres.00063  result.sourres.00065  result.sourres.00067  result.sourres.00069  result.sourres.00071  result.sourres.00073  result.sourres.00075  result.sourres.00077  result.sourres.00079  result.sourres.00081  result.sourres.00083  result.sourres.00085  (+64 more)
Data Pipeline/esss 3phase lgr field small/esss3lgrfield_R00002/: result.sourres  result.sourres.00010  result.sourres.00013  result.sourres.00015  result.sourres.00017  result.sourres.00019  result.sourres.00021  result.sourres.00023  result.sourres.00025  result.sourres.00027  result.sourres.00029  result.sourres.00031  result.sourres.00033  result.sourres.00035  result.sourres.00037  result.sourres.00039  result.sourres.00041  result.sourres.00043  result.sourres.00045  result.sourres.00047  result.sourres.00049  result.sourres.00051  result.sourres.00053  result.sourres.00055  result.sourres.00057  result.sourres.00059  result.sourres.00061  result.sourres.00063  result.sourres.00065  result.sourres.00067  result.sourres.00069  result.sourres.00071  result.sourres.00073  result.sourres.00075  result.sourres.00077  result.sourres.00079  result.sourres.00081  result.sourres.00083  result.sourres.00085  result.sourres.00087  (+64 more)
Data Pipeline/esss 3phase lgr field small/esss3lgrfield_R00003/: result.sourres  result.sourres.00000  result.sourres.00010  result.sourres.00013  result.sourres.00015  result.sourres.00017  result.sourres.00019  result.sourres.00021  result.sourres.00023  result.sourres.00025  result.sourres.00027  result.sourres.00029  result.sourres.00031  result.sourres.00033  result.sourres.00035  result.sourres.00037  result.sourres.00039  result.sourres.00041  result.sourres.00043  result.sourres.00045  result.sourres.00047  result.sourres.00049  result.sourres.00051  result.sourres.00053  result.sourres.00055  result.sourres.00057  result.sourres.00059  result.sourres.00061  result.sourres.00063  result.sourres.00065  result.sourres.00067  result.sourres.00069  result.sourres.00071  result.sourres.00073  result.sourres.00075  result.sourres.00077  result.sourres.00079  result.sourres.00081  result.sourres.00083  result.sourres.00085  (+65 more)
Data Pipeline/esss 3phase lgr field small/esss3lgrfield_R00006/: result.sourres  result.sourres.00000  result.sourres.00010  result.sourres.00013  result.sourres.00015  result.sourres.00017  result.sourres.00019  result.sourres.00021  result.sourres.00023  result.sourres.00025  result.sourres.00027  result.sourres.00029  result.sourres.00031  result.sourres.00033  result.sourres.00035  result.sourres.00037  result.sourres.00039  result.sourres.00041  result.sourres.00043  result.sourres.00045  result.sourres.00047  result.sourres.00049  result.sourres.00051  result.sourres.00053  result.sourres.00055  result.sourres.00057  result.sourres.00059  result.sourres.00061  result.sourres.00063  result.sourres.00065  result.sourres.00067  result.sourres.00069  result.sourres.00071  result.sourres.00073  result.sourres.00075  result.sourres.00077  result.sourres.00079  result.sourres.00081  result.sourres.00083  result.sourres.00085  (+64 more)
Data Pipeline/esss 3phase lgr field/esss 3phase lgr field_R00001/: result.sourres  result.sourres.00001  result.sourres.00002  result.sourres.00003  result.sourres.00004  result.sourres.00005  result.sourres.00006  result.sourres.00007  result.sourres.00008  result.sourres.00009  result.sourres.00010  result.sourres.00011  result.sourres.00012  result.sourres.00013  result.sourres.00014  result.sourres.00015  result.sourres.00016  result.sourres.00017  result.sourres.00018  result.sourres.00019  result.sourres.00020  result.sourres.00021  result.sourres.00022  result.sourres.00023  result.sourres.00024  result.sourres.00025  (+187 more)
k8s/: configmap.yaml  deployment.yaml  service.yaml
src/surrogate_factory/: __init__.py  factory.py  pipeline.py
tests/: conftest.py  test_api.py  test_esss_parser.py  test_factory.py  test_general_parser.py  test_kriging.py  test_neural_network.py  test_pca.py  test_processor.py  test_rbf.py
(+8122 files in other folders)
